--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <groupId>com.gatligTest</groupId>
   <artifactId>make-me-top-load-tests</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -31,33 +30,28 @@
       <artifactId>gatling-recorder</artifactId>
       <version>${gatling.version}</version>
     </dependency>
+
   </dependencies>
 
   <build>
+
     <plugins>
       <plugin>
         <groupId>io.gatling</groupId>
         <artifactId>gatling-maven-plugin</artifactId>
         <version>${gatling-maven-plugin.version}</version>
-      </plugin>
 
-      <plugin>
-        <groupId>io.gatling</groupId>
-        <artifactId>gatling-maven-plugin</artifactId>
-        <version>3.0.5</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
-          <simulationsFolder>src/test/scala</simulationsFolder>
-          <simulationClass>simulations.PlanetLoadTest</simulationClass>
-          <simulationClass>simulations.SystemLoadTest</simulationClass>
+          <!--   ...  -->
+          <runMultipleSimulations>true</runMultipleSimulations>
+          <includes>
+            <include>simulations.GalaxyServiceLoadTest</include>
+          </includes>
+
         </configuration>
       </plugin>
+
+
     </plugins>
   </build>
 </project>
