--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
       <artifactId>gatling-recorder</artifactId>
       <version>${gatling.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+      <version>1.4.1</version>
+    </dependency>
   </dependencies>
 
   <build>
